working with buttons

--- a/wvs_explore.ipynb
+++ b/wvs_explore.ipynb
@@ -4567,7 +4567,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4576,7 +4583,7 @@
     "#Save all cluster locations\n",
     "centers_to_save = centers_tsne / centers_tsne.std(axis = 0)[None, :]\n",
     "\n",
-    "cluster_dict = {}\n",
+    "cluster_dict = []\n",
     "\n",
     "for cluster_id, center in enumerate(centers_to_save):\n",
     "    country_pop = get_cluster_countries(cluster_id)\n",
@@ -4586,123 +4593,59 @@
     "    scaled_answers = [str(ans) for ans in scaled_answers]\n",
     "    \n",
     "    answer_dict = dict(zip(X.columns, scaled_answers))\n",
-    "    cluster_dict[str(int(cluster_id))] = {\"id\":str(int(cluster_id)),\n",
+    "    cluster_dict.append({\"id\":str(int(cluster_id)),\n",
     "                                \"x\":str(center[0]),\n",
     "                                \"y\":str(center[1]),\n",
     "                                \"countries\":country_pop,\n",
-    "                                \"answers\":answer_dict}\n",
+    "                                \"answers\":answer_dict})\n",
     "    \n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with open('./jsons/cluster_data.json', 'w') as outfile:\n",
     "    json.dump(cluster_dict, outfile, indent = 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save country list\n",
+    "\n",
+    "countries = Y.unique().astype(np.str)\n",
+    "real_names = [alpha_to_name(country) for country in countries]\n",
+    "\n",
+    "country_json = [{\"code\":countries[n], \"name\":real_names[n]} for n in range(len(countries))]\n",
+    "\n",
+    "with open('./jsons/country_data.json', 'w') as outfile:\n",
+    "    json.dump(country_json, outfile, indent = 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ALB': 104,\n",
-       " 'AND': 4,\n",
-       " 'AZE': 2,\n",
-       " 'ARG': 13,\n",
-       " 'AUS': 6,\n",
-       " 'AUT': 0,\n",
-       " 'BGD': 0,\n",
-       " 'ARM': 76,\n",
-       " 'BOL': 14,\n",
-       " 'BIH': 283,\n",
-       " 'BRA': 28,\n",
-       " 'BGR': 135,\n",
-       " 'MMR': 0,\n",
-       " 'BLR': 29,\n",
-       " 'CHL': 7,\n",
-       " 'CHN': 0,\n",
-       " 'TWN': 0,\n",
-       " 'COL': 33,\n",
-       " 'HRV': 54,\n",
-       " 'CYP': 93,\n",
-       " 'CZE': 8,\n",
-       " 'DNK': 0,\n",
-       " 'ECU': 11,\n",
-       " 'ETH': 11,\n",
-       " 'EST': 7,\n",
-       " 'FIN': 0,\n",
-       " 'FRA': 7,\n",
-       " 'GEO': 86,\n",
-       " 'DEU': 8,\n",
-       " 'GRC': 229,\n",
-       " 'GTM': 46,\n",
-       " 'HKG': 2,\n",
-       " 'HUN': 21,\n",
-       " 'ISL': 4,\n",
-       " 'IDN': 0,\n",
-       " 'IRN': 31,\n",
-       " 'IRQ': 0,\n",
-       " 'ITA': 14,\n",
-       " 'JPN': 3,\n",
-       " 'KAZ': 18,\n",
-       " 'JOR': 0,\n",
-       " 'KOR': 0,\n",
-       " 'KGZ': 39,\n",
-       " 'LBN': 29,\n",
-       " 'LTU': 4,\n",
-       " 'MAC': 1,\n",
-       " 'MYS': 3,\n",
-       " 'MEX': 30,\n",
-       " 'MNE': 94,\n",
-       " 'NLD': 4,\n",
-       " 'NZL': 0,\n",
-       " 'NIC': 13,\n",
-       " 'NGA': 1,\n",
-       " 'NOR': 0,\n",
-       " 'PAK': 2,\n",
-       " 'PER': 21,\n",
-       " 'PHL': 0,\n",
-       " 'POL': 22,\n",
-       " 'PRI': 59,\n",
-       " 'ROU': 516,\n",
-       " 'RUS': 44,\n",
-       " 'SRB': 330,\n",
-       " 'SVK': 13,\n",
-       " 'VNM': 0,\n",
-       " 'SVN': 8,\n",
-       " 'ZWE': 3,\n",
-       " 'ESP': 3,\n",
-       " 'SWE': 1,\n",
-       " 'CHE': 3,\n",
-       " 'TJK': 0,\n",
-       " 'THA': 1,\n",
-       " 'TUN': 23,\n",
-       " 'TUR': 56,\n",
-       " 'MKD': 195,\n",
-       " 'EGY': 1,\n",
-       " 'GBR': 7,\n",
-       " 'USA': 14}"
+       "array(['ALB', 'AND', 'AZE', 'ARG', 'AUS', 'AUT', 'BGD', 'ARM', 'BOL',\n",
+       "       'BIH', 'BRA', 'BGR', 'MMR', 'BLR', 'CHL', 'CHN', 'TWN', 'COL',\n",
+       "       'HRV', 'CYP', 'CZE', 'DNK', 'ECU', 'ETH', 'EST', 'FIN', 'FRA',\n",
+       "       'GEO', 'DEU', 'GRC', 'GTM', 'HKG', 'HUN', 'ISL', 'IDN', 'IRN',\n",
+       "       'IRQ', 'ITA', 'JPN', 'KAZ', 'JOR', 'KOR', 'KGZ', 'LBN', 'LTU',\n",
+       "       'MAC', 'MYS', 'MEX', 'MNE', 'NLD', 'NZL', 'NIC', 'NGA', 'NOR',\n",
+       "       'PAK', 'PER', 'PHL', 'POL', 'PRI', 'ROU', 'RUS', 'SRB', 'SVK',\n",
+       "       'VNM', 'SVN', 'ZWE', 'ESP', 'SWE', 'CHE', 'TJK', 'THA', 'TUN',\n",
+       "       'TUR', 'MKD', 'EGY', 'GBR', 'USA'], dtype='<U3')"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "country_pop"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
