added more not reverses

--- a/wvs_explore.ipynb
+++ b/wvs_explore.ipynb
@@ -4695,12 +4695,17 @@
     "\n",
     "not_reversed += [f\"Q{n}\" for n in range(180,196)]\n",
     "\n",
-    "not_reversed += [f\"Q{n}\" for n in range(241,254)]\n"
+    "not_reversed += [f\"Q{n}\" for n in range(241,254)]\n",
+    "\n",
+    "not_reversed += [f\"Q289_{n}.0\" for n in range(0,10)]\n",
+    "\n",
+    "not_reversed += [f\"Q260_{n}.0\" for n in range(0,10)]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4727,7 +4732,7 @@
     "    country_pop = {key:str(country_pop[key]) for key in country_pop.keys()}\n",
     "    \n",
     "    scaled_answers = get_cluster_answers(cluster_id)\n",
-    "    scaled_answers = [str(ans) for ans in scaled_answers]\n",
+    "#     scaled_answers = [str(ans) for ans in scaled_answers]\n",
     "    \n",
     "    scaled_answers = [str(scaled_answers[n] * (1 if col in not_reversed else -1)) for (n, col) in enumerate(X.columns)]\n",
     "    \n",
