--- a/wvs_explore.ipynb
+++ b/wvs_explore.ipynb
@@ -4681,7 +4681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4692,20 +4692,17 @@
     "               , \"Q154_1.0\", \"Q154_2.0\", \"Q154_3.0\", \"Q154_4.0\", \"Q164\", \"Q263\",\"Q264\",\"Q265\",\"Q274\",\"Q275\"]\n",
     "\n",
     "not_reversed += [f\"Q{n}R\" for n in range(94,106)]\n",
-    "\n",
     "not_reversed += [f\"Q{n}\" for n in range(180,196)]\n",
-    "\n",
     "not_reversed += [f\"Q{n}\" for n in range(241,254)]\n",
-    "\n",
     "not_reversed += [f\"Q289_{n}.0\" for n in range(0,10)]\n",
-    "\n",
-    "not_reversed += [f\"Q260_{n}.0\" for n in range(0,10)]\n",
-    "\n"
+    "not_reversed += [f\"Q260_{n}.0\" for n in range(0,2)]\n",
+    "not_reversed += [f\"Q152_{n}.0\" for n in range(0,5)]\n",
+    "not_reversed += [f\"Q154_{n}.0\" for n in range(0,5)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
